Increase font-size of govuk-font-24 on mobile to ensure there is enough differentation with body

--- a/src/globals/scss/settings/_typography-responsive.scss
+++ b/src/globals/scss/settings/_typography-responsive.scss
@@ -71,7 +71,7 @@ $govuk-font-27: (
 
 $govuk-font-24: (
   null: (
-    font-size: 17px,
+    font-size: 18px,
     line-height: 20px
   ),
   tablet: (
@@ -79,7 +79,7 @@ $govuk-font-24: (
     line-height: 30px
   ),
   print: (
-    font-size: 17pt,
+    font-size: 18pt,
     line-height: 1.15
   )
 );
